# pikastore

./: Cargo.toml  LICENSE  README.md  Rocket.toml  go.mod  go.sum  justfile  pikastore.go
.github/: funding.yml
api/: auth.go  serve.go  web.go
auth/: auth.go
cmd/: serve.go  update.go
core/: app.go  cobra.go  configs.go  db.go  schema.go  serve.go  server.go
core/tools/: connectdb.go  db.go  schema.go
router/: group.go  router.go  router_test.go  server.go  static.go
src/apis/: Cargo.toml  lib.rs  server.rs
src/apis/routes/: mod.rs
src/apis/routes/s3/: bucket.rs  buckets.rs
src/apis/src/: main.rs
src/apis/src/routes/: hw.rs  mod.rs
src/pikastore/: Cargo.toml
src/pikastore/src/: main.rs  schema.rs
src/services/: Cargo.toml  lib.rs
src/services/cmd/: bucket.rs  secrets.rs
src/services/database/: bridge.rs  db.rs  mod.rs
src/services/utils/: mod.rs  schema.rs  xml.rs
web/: bun.lockb  embed.go  package.json  svelte.config.js  tsconfig.json  vite.config.ts
web/src/: app.html  style.css
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/dashboard/: +layout.svelte  +page.svelte
web/src/routes/dashboard/logs/: +page.svelte
web/src/routes/dashboard/settings/: +page.svelte
web/src/routes/dashboard/storage/: +page.svelte
